--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,14 @@
             <version>5.3.1</version>
             <scope>test</scope>
         </dependency>
+<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.0.3</version>
+</dependency>
+
+
     </dependencies>
 
     <build>
